--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       max-width: 100vw;
       max-height: 100vh;
       margin: 0;
+      position: relative;
     }
 
     body:before {
@@ -27,6 +28,7 @@
       left: 50%;
       transform: translate(-50%, -50%);
       text-align: center;
+      transition: font-size 0.3s ease-out;
     }
 
     * {
@@ -142,6 +144,7 @@
       display: inline-block;
       padding-right: 0px;
       min-width: 215px;
+      transition: font-size 0.3s ease-out;
     }
 
     div:before {
@@ -165,12 +168,13 @@
       position: relative;
       overflow: hidden;
       max-height: 0;
-      transition: max-height 0.3s ease-out;
+      transition: max-height 0.3s ease-out, font-size 0.3s ease-out;
     }
 
     div h1.active {
       max-height: 300px;
-      transition: max-height 0.5s ease-in;
+      font-size: 30px;
+      transition: max-height 0.5s ease-in, font-size 0.3s ease-in;
     }
 
     div h1:after {
@@ -228,7 +232,7 @@
 <body>
   <input type="checkbox" id="toggleText" />
   <div>
-    <h1>Hello my dearest Madhu,<br/><br/>I want you to know that I am always by your side, supporting you in every step of your journey, and I love you.</h1>
+    <h1>Hello my dearest Madhu,<br/><br/>I want you to know that you are the light of my life, and I cherish every moment with you. Your love fills my heart with joy, and I am grateful for the beautiful journey we share together.</h1>
   </div>
 
   <script>
