--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 <body>
   <input type="checkbox" id="toggleText" />
   <div>
-    <h1>Hello my dearest Madhu,<br/><br/>I want you to know that you are the light of my life, and I cherish every moment with you. Your love fills my heart with joy, and I am grateful for the beautiful journey we share together.</h1>
+    <h1>Hello my dearest Madhu,<br/><br/>I want you to know that I Love You, Just take care of yourself.</h1>
   </div>
 
   <script>
